--- a/200/less/tables.less
+++ b/200/less/tables.less
@@ -106,6 +106,7 @@
                     }
                     .side-menu {
                         margin-top: 10px;
+                        margin-right: -15px;
 
                         li {
                             position: relative;
@@ -523,6 +524,7 @@
 
         nav.menu-res {
             text-align: center;
+            margin-right: -22px;
 
             ul {
                 padding: 0;
