--- a/187/less/type-187.less
+++ b/187/less/type-187.less
@@ -1,5 +1,4 @@
-
-.type-355 {
+.type-187 {
     .boxed {
 
         background: url(../images/box-bg.png) repeat;
@@ -72,11 +71,36 @@
                 -webkit-transform: translateX(0);
                 transform: translateX(0);
             }
-            .stars {
-                opacity: 1;
-            }
             .stars-clr{
-                color:yellow;
+                color: yellow;
+            }
+            .stars{
+                width: 270px;
+                display: inline-block;
+                opacity: 1;
+                input.star { display: none; }
+                label.star {
+                    float: right;
+                    padding: 10px;
+                    font-size: 36px;
+                    color: #444;
+                }
+
+                input.star:checked ~ label.star:before {
+                    content: '\f005';
+                    color: #FD4;
+                }
+
+                input.star-5:checked ~ label.star:before {
+                    color: #FE7;
+                }
+
+                input.star-1:checked ~ label.star:before { color: #F62; }
+                
+                label.star:before {
+                    content: '\f006';
+                    font-family: FontAwesome;
+                }
             }
         }
         .product {
@@ -119,7 +143,7 @@
             text-decoration: none;
         }
         a:-webkit-any-link {
-            cursor: auto;
+            cursor: pointer;
         }
         a:hover {
             color: #008e99;
@@ -198,63 +222,63 @@
     }
 }
 @media (min-width: 980px){
-        .product {
+    .product {
 
-            .picture img {
+        .picture img {
+            margin-bottom: 0;
+        }
+        .img-overlay {
+            background-color: rgba(255,255,255,0.33);
+            opacity: 0;
+            position: absolute;
+            top: 0;
+            left: 0;
+            right: 0;
+            bottom: 0;
+
+            -webkit-transition: opacity 0.33s ease-in-out;
+            -moz-transition: opacity 0.33s ease-in-out;
+            -o-transition: opacity 0.33s ease-in-out;
+            transition: opacity 0.33s ease-in-out;
+        }
+
+        .picture { 
+            .btn.more {
+                margin-top: -40px;
+                -moz-transform: translateX(-195px);
+                -ms-transform: translateX(-195px);
+                -webkit-transform: translateX(-195px);
+                transform: translateX(-195px);
+            }
+            .btn {
                 margin-bottom: 0;
+                padding-top: 10px;
+                padding-bottom: 10px;
+                font-weight: bold;
+                text-transform: uppercase;
+                width: 116px;
+                padding-left: 0;
+                padding-right: 0;
+                margin-left: -58px;
+                -webkit-transition: all 0.5s ease;
+                -moz-transition: all 0.5s ease;
+                -o-transition: all 0.5s ease;
+                transition: all 0.5s ease;
             }
-            .img-overlay {
-                background-color: rgba(255,255,255,0.33);
-                opacity: 0;
+
+            .btn.buy {
+                margin-top: 10px;
+                -moz-transform: translateX(195px);
+                -ms-transform: translateX(195px);
+                -webkit-transform: translateX(195px);
+                transform: translateX(195px);
+            }
+            .img-overlay .btn {
                 position: absolute;
-                top: 0;
-                left: 0;
-                right: 0;
-                bottom: 0;
-
-                -webkit-transition: opacity 0.33s ease-in-out;
-                -moz-transition: opacity 0.33s ease-in-out;
-                -o-transition: opacity 0.33s ease-in-out;
-                transition: opacity 0.33s ease-in-out;
-            }
-
-            .picture { 
-                .btn.more {
-                    margin-top: -40px;
-                    -moz-transform: translateX(-195px);
-                    -ms-transform: translateX(-195px);
-                    -webkit-transform: translateX(-195px);
-                    transform: translateX(-195px);
-                }
-                .btn {
-                    margin-bottom: 0;
-                    padding-top: 10px;
-                    padding-bottom: 10px;
-                    font-weight: bold;
-                    text-transform: uppercase;
-                    width: 116px;
-                    padding-left: 0;
-                    padding-right: 0;
-                    margin-left: -58px;
-                    -webkit-transition: all 0.5s ease;
-                    -moz-transition: all 0.5s ease;
-                    -o-transition: all 0.5s ease;
-                    transition: all 0.5s ease;
-                }
-                
-                .btn.buy {
-                    margin-top: 10px;
-                    -moz-transform: translateX(195px);
-                    -ms-transform: translateX(195px);
-                    -webkit-transform: translateX(195px);
-                    transform: translateX(195px);
-                }
-                .img-overlay .btn {
-                    position: absolute;
-                    left: 50%;
-                    top: 50%;
-                }
+                left: 50%;
+                top: 50%;
             }
         }
     }
+}
 
