--- a/196/less/type-196.less
+++ b/196/less/type-196.less
@@ -79,8 +79,8 @@
             margin-bottom: 50px;
         }
         .swiper-slide{
-/*            padding: -25px 0px;*/
-/*            overflow: hidden;*/
+            /*            padding: -25px 0px;*/
+            /*            overflow: hidden;*/
             .block{
                 transition: transform 0.9s ease;
                 background-color: @white-color;
@@ -99,7 +99,8 @@
                     img{
                         margin-top: 10px;
                         width: 100%;
-                    }                    
+                        cursor: pointer;
+                    }
                 }
             }
             .block:hover{                
