--- a/196/css/type-196.css
+++ b/196/css/type-196.css
@@ -1,9 +1,11 @@
 .type-196 {
-  width: 100%;
+  width: 100%px;
 }
 .type-196 .container {
   padding-right: 15px;
   padding-left: 15px;
+  margin-right: auto;
+  margin-left: auto;
 }
 .type-196 .swiper-button-next,
 .type-196 .swiper-button-prev {
@@ -15,9 +17,7 @@
   text-align: center;
   width: 30px;
   height: 55px;
-  margin-top: -3px;
-  margin-left: -10px;
-  margin-right: -10px;
+  margin-top: -15px;
 }
 .type-196 .swiper-button-prev:hover,
 .type-196 .swiper-button-next:hover {
