--- a/187/css/type-187.css
+++ b/187/css/type-187.css
@@ -75,36 +75,31 @@
   -webkit-transform: translateX(0);
   transform: translateX(0);
 }
-.type-187 .popup-products .product:hover .stars-clr {
-  color: yellow;
-}
 .type-187 .popup-products .product:hover .stars {
-  width: 270px;
-  display: inline-block;
   opacity: 1;
 }
-.type-187 .popup-products .product:hover .stars input.star {
-  display: none;
+.type-187 .popup-products .product:hover .rating-stars {
+  display: inline-flex;
+  align-items: center;
 }
-.type-187 .popup-products .product:hover .stars label.star {
-  float: right;
-  padding: 10px;
-  font-size: 36px;
-  color: #444;
+.type-187 .popup-products .product:hover .rating-stars ul {
+  list-style-type: none;
+  padding: 0;
+  -moz-user-select: none;
+  -webkit-user-select: none;
 }
-.type-187 .popup-products .product:hover .stars input.star:checked ~ label.star:before {
-  content: '\f005';
-  color: #FD4;
+.type-187 .popup-products .product:hover .rating-stars ul >li.star {
+  display: inline-block;
 }
-.type-187 .popup-products .product:hover .stars input.star-5:checked ~ label.star:before {
-  color: #FE7;
+.type-187 .popup-products .product:hover .rating-stars ul >li.star >i.fa {
+  font-size: 20px;
+  color: #ccc;
 }
-.type-187 .popup-products .product:hover .stars input.star-1:checked ~ label.star:before {
-  color: #F62;
+.type-187 .popup-products .product:hover .rating-stars ul >li.star.hover >i.fa {
+  color: #fcb800;
 }
-.type-187 .popup-products .product:hover .stars label.star:before {
-  content: '\f006';
-  font-family: FontAwesome;
+.type-187 .popup-products .product:hover .rating-stars ul >li.star.selected >i.fa {
+  color: #fcb800;
 }
 .type-187 .popup-products .product {
   border-radius: 2px;
