--- a/187/less/type-187.less
+++ b/187/less/type-187.less
@@ -71,35 +71,34 @@
                 -webkit-transform: translateX(0);
                 transform: translateX(0);
             }
-            .stars-clr{
-                color: yellow;
-            }
             .stars{
-                width: 270px;
-                display: inline-block;
                 opacity: 1;
-                input.star { display: none; }
-                label.star {
-                    float: right;
-                    padding: 10px;
-                    font-size: 36px;
-                    color: #444;
-                }
-
-                input.star:checked ~ label.star:before {
-                    content: '\f005';
-                    color: #FD4;
-                }
-
-                input.star-5:checked ~ label.star:before {
-                    color: #FE7;
-                }
-
-                input.star-1:checked ~ label.star:before { color: #F62; }
-                
-                label.star:before {
-                    content: '\f006';
-                    font-family: FontAwesome;
+            }
+            .rating-stars {
+                display: inline-flex;
+                align-items:center;
+                ul {
+                    list-style-type: none;
+                    padding: 0;
+                    -moz-user-select: none;
+                    -webkit-user-select: none;
+                    >li.star {
+                        display: inline-block;
+                        >i.fa {
+                            font-size: 20px;
+                            color: #ccc;
+                        }
+                    }
+                    >li.star.hover {
+                        >i.fa {
+                            color: #fcb800;
+                        }
+                    }
+                    >li.star.selected {
+                        >i.fa {
+                            color: #fcb800;
+                        }
+                    }
                 }
             }
         }
