--- a/182/less/type-182.less
+++ b/182/less/type-182.less
@@ -1,7 +1,32 @@
 @font-size: 14px;
 .type-182 {
-    .icon-star:before {
-        content: "\f005";
+    .rating-stars {
+        display: inline-flex;
+        align-items:center;
+        margin: -15px;
+        ul {
+            list-style-type: none;
+            padding: 0;
+            -moz-user-select: none;
+            -webkit-user-select: none;
+            >li.star {
+                display: inline-block;
+                >i.fa {
+                    font-size: 5px;
+                    color: #ccc;
+                }
+            }
+            >li.star.hover {
+                >i.fa {
+                    color: #fcb800;
+                }
+            }
+            >li.star.selected {
+                >i.fa {
+                    color: #fcb800;
+                }
+            }
+        }
     }
     .btn {
         background-color: #e5e5e5;
@@ -23,7 +48,7 @@
     .btn:focus {
         background-position: 0 0;
     }
-   
+
     .btn.btn-danger {
         -webkit-box-shadow: 0 2px 0 #be1b2e;
         -moz-box-shadow: 0 2px 0 #be1b2e;
@@ -62,7 +87,7 @@
         filter: progid DXImageTransform.Microsoft.gradient(enabled=false);
     }
     .btn.btn-primary:hover,.btn.btn-primary:focus,.btn.btn-primary:active,
-    .btn.btn-primary.active,.btn.btn-primary.disabled,.btn.btn-primary[disabled] {
+        .btn.btn-primary.active,.btn.btn-primary.disabled,.btn.btn-primary[disabled] {
         color: white;
         background-color: #00becc;
         *background-color: #00a6b3;
@@ -116,14 +141,14 @@
     h1 a:hover,h2 a:hover,h3 a:hover,h4 a:hover,h5 a:hover,h6 a:hover {
         color: #636475;
     }
-    
+
     .main-titles {
         position: relative;
         margin-bottom: 15px;
         font-weight: bold;
         padding-bottom: 16px;
         .title {
-            margin: 0;
+            margin: 20px auto;
             font-size: 20px;
         }
         .arrows {
@@ -159,7 +184,7 @@
             left: 0;
         }
     }
-    
+
     .light {
         font-weight: normal;
     }
@@ -172,9 +197,6 @@
     }
     .border-bottom {
         border-bottom: 1px solid #e0e0e0;
-    }
-    .stars-clr {
-        color: #f2cd00;
     }
     .striked {
         text-decoration: line-through;
@@ -227,7 +249,7 @@
         -moz-border-radius: 3px;
         border-radius: 3px;
     }
-    
+
     .icon-heart:before {
         content: "\f004";
     }
@@ -273,7 +295,7 @@
     .product-img.featured .picture .img-overlay {
         display: none;
     }
-    
+
     .product:hover .img-overlay {
         opacity: 1;
         filter: alpha(opacity=100);
@@ -290,7 +312,7 @@
     .product .picture .btn {
         margin-bottom: 5px;
     }
-   
+
     .product:hover .picture .btn {
         -moz-transform: translateX(0);
         -ms-transform: translateX(0);
@@ -315,7 +337,7 @@
         filter: progid DXImageTransform.Microsoft.gradient(startColorstr='#FF9CC256', endColorstr='#FF749636', GradientType=0);
         color: #3c5924;
     }
-    
+
     .push-up.over-slider {
         position: relative;
         z-index: 20;
@@ -332,7 +354,7 @@
         margin: -46px -25px 0;
         padding: 17px 25px 0;
     }
-    
+
     .icon-chevron-left:before {
         content: "\f053";
     }    
@@ -385,83 +407,83 @@
         color: #b9b8ba;
     }
 }
-    @media (min-width: 992px) {
-        .col-md-3 {
-            margin-bottom: 15px;
-        }
+@media (min-width: 992px) {
+    .col-md-3 {
+        margin-bottom: 15px;
     }
-    @media (min-width: 980px) {
-        .product .picture img {
-            margin-bottom: 0;
-        }
-        .product .picture .btn {
-            margin-bottom: 0;
-            padding-top: 10px;
-            padding-bottom: 10px;
-            font-weight: bold;
-            text-transform: uppercase;
-            width: 116px;
-            padding-left: 0;
-            padding-right: 0;
-            margin-left: -58px;
-            -webkit-transition: all 0.5s ease;
-            -moz-transition: all 0.5s ease;
-            -o-transition: all 0.5s ease;
-            transition: all 0.5s ease;
-        }
-        .product .picture .btn.more {
-            margin-top: -40px;
-            -moz-transform: translateX(-195px);
-            -ms-transform: translateX(-195px);
-            -webkit-transform: translateX(-195px);
-            transform: translateX(-195px);
-        }
-        .product .picture .btn.buy {
-            margin-top: 10px;
-            -moz-transform: translateX(195px);
-            -ms-transform: translateX(195px);
-            -webkit-transform: translateX(195px);
-            transform: translateX(195px);
-        }
-        .product-img.featured .picture .img-overlay {
-            display: block;
-        }
-        .picture .img-overlay {
-            background-color: rgba(255, 255, 255, 0.33);
-            opacity: 0;
-            position: absolute;
-            top: 0;
-            left: 0;
-            right: 0;
-            bottom: 0;
-            -webkit-transition: opacity 0.33s ease-in-out;
-            -moz-transition: opacity 0.33s ease-in-out;
-            -o-transition: opacity 0.33s ease-in-out;
-            transition: opacity 0.33s ease-in-out;
-        }
-        .picture .img-overlay .btn {
-            position: absolute;
-            left: 50%;
-            top: 50%;
-        }
+}
+@media (min-width: 980px) {
+    .product .picture img {
+        margin-bottom: 0;
     }
-      
-    @media (min-width: 1200px) {
-        .row:after {
-            clear: both;
-        }
-        .row:before,
-        .row:after {
-            display: table;
-            content: "";
-            line-height: 0;
-        }
-        .span12 {
-            width: 1170px;
-        }
-         [class*="span"] {
-            float: left;
-            min-height: 1px;
-            margin-bottom: 30px;
-        }
+    .product .picture .btn {
+        margin-bottom: 0;
+        padding-top: 10px;
+        padding-bottom: 10px;
+        font-weight: bold;
+        text-transform: uppercase;
+        width: 116px;
+        padding-left: 0;
+        padding-right: 0;
+        margin-left: -58px;
+        -webkit-transition: all 0.5s ease;
+        -moz-transition: all 0.5s ease;
+        -o-transition: all 0.5s ease;
+        transition: all 0.5s ease;
     }
+    .product .picture .btn.more {
+        margin-top: -40px;
+        -moz-transform: translateX(-195px);
+        -ms-transform: translateX(-195px);
+        -webkit-transform: translateX(-195px);
+        transform: translateX(-195px);
+    }
+    .product .picture .btn.buy {
+        margin-top: 10px;
+        -moz-transform: translateX(195px);
+        -ms-transform: translateX(195px);
+        -webkit-transform: translateX(195px);
+        transform: translateX(195px);
+    }
+    .product-img.featured .picture .img-overlay {
+        display: block;
+    }
+    .picture .img-overlay {
+        background-color: rgba(255, 255, 255, 0.33);
+        opacity: 0;
+        position: absolute;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        -webkit-transition: opacity 0.33s ease-in-out;
+        -moz-transition: opacity 0.33s ease-in-out;
+        -o-transition: opacity 0.33s ease-in-out;
+        transition: opacity 0.33s ease-in-out;
+    }
+    .picture .img-overlay .btn {
+        position: absolute;
+        left: 50%;
+        top: 50%;
+    }
+}
+
+@media (min-width: 1200px) {
+    .row:after {
+        clear: both;
+    }
+    .row:before,
+    .row:after {
+        display: table;
+        content: "";
+        line-height: 0;
+    }
+    .span12 {
+        width: 1170px;
+    }
+    [class*="span"] {
+        float: left;
+        min-height: 1px;
+        margin-bottom: 30px;
+    }
+}
