--- a/182/less/type-182.less
+++ b/182/less/type-182.less
@@ -150,6 +150,7 @@
         .title {
             margin: 20px auto;
             font-size: 20px;
+            padding: 0 10px;
         }
         .arrows {
             position: absolute;
