--- a/182/css/type-182.css
+++ b/182/css/type-182.css
@@ -163,6 +163,7 @@
 .type-182 .main-titles .title {
   margin: 20px auto;
   font-size: 20px;
+  padding: 0 10px;
 }
 .type-182 .main-titles .arrows {
   position: absolute;
