--- a/196/less/type-196.less
+++ b/196/less/type-196.less
@@ -1,10 +1,8 @@
 .type-196{
-    width : 100%px;
+    width : 100%;
     .container{
         padding-right: 15px;
         padding-left: 15px;
-        margin-right: auto;
-        margin-left: auto;
     }
     .swiper-button-next, .swiper-button-prev{
         position: absolute;
@@ -16,6 +14,9 @@
         width: 30px;
         height: 55px;
         margin-top: -15px;
+        margin-left: -10px;
+        margin-right: -10px;
+
     }
 
     .swiper-button-prev:hover, .swiper-button-next:hover{
