--- a/806/less/806.less
+++ b/806/less/806.less
@@ -1,5 +1,7 @@
-.modul-3{
-
+body {
+        font-family: 'Open Sans', 'sans-serif';
+    }
+.type-806{
     @color_megamenu_a:#fff;
     @color_megamenu:#4d7df0;
     @color_background:#131930;
@@ -7,12 +9,8 @@
     @color_1:#000000;
     @color_2:#4d7df0;
     @color_hovertoggle:#3333ff;
-
-
-
-    body {
-        font-family: 'Open Sans', 'sans-serif';
-    }
+    /*background-color: #131930;*/
+    
     .mega-dropdown {
         position: static !important;
     }
@@ -166,5 +164,8 @@
         border-color: @color_black !important;
         color: @color_2 !important;
     }
-
+    .container{
+        padding: 3%;
+    }
 }
+
